// Copyright 2010 Google Inc. All Rights Reserved.
// Author: wink@google.com (Wink Saville)

package ril_proto;

option java_package='com.android.internal.telephony.ril_proto';
option java_outer_classname='RilCtrlCmds';

import "ril.proto";

enum CtrlCmd {
  CTRL_CMD_ECHO = 0;
  CTRL_CMD_GET_RADIO_STATE = 1;
}

enum CtrlStatus {
    CTRL_STATUS_OK = 0;
    CTRL_STATUS_ERR = 1;
}

message CtrlRspRadioState {
  required ril_proto.RadioState state = 1;
}
